<?xml version="1.0"?>
<package format="2">
  <name>cis_camera</name>
  <version>0.0.0</version>
  <description>The cis_camera package</description>
  
  <maintainer email="tajima@todo.todo">tajima</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libuvc</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>libuvc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/cis_camera_nodelet.xml" />
  </export>
  
</package>
